Use Strimzi to start Kafka container in Kafka Streams

--- a/kafka-streams-quickstart/aggregator/pom.xml
+++ b/kafka-streams-quickstart/aggregator/pom.xml
@@ -19,7 +19,7 @@
     <quarkus.platform.version>999-SNAPSHOT</quarkus.platform.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <debezium.version>1.1.0.Final</debezium.version>
+    <strimzi-test-container.version>0.22.1</strimzi-test-container.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -61,17 +61,10 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>io.debezium</groupId>
-      <artifactId>debezium-core</artifactId>
-      <version>${debezium.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.debezium</groupId>
-      <artifactId>debezium-core</artifactId>
-      <version>${debezium.version}</version>
-      <type>test-jar</type>
-      <scope>test</scope>
+        <groupId>io.strimzi</groupId>
+        <artifactId>strimzi-test-container</artifactId>
+        <version>${strimzi-test-container.version}</version>
+        <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.kafka</groupId>
