--- a/kafka-streams-quickstart/aggregator/src/main/resources/application.properties
+++ b/kafka-streams-quickstart/aggregator/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-quarkus.kafka-streams.bootstrap-servers=localhost:9092
 quarkus.kafka-streams.application-id=temperature-aggregator
 quarkus.kafka-streams.topics=weather-stations,temperature-values
 
@@ -8,7 +7,7 @@ kafka-streams.commit.interval.ms=1000
 kafka-streams.metadata.max.age.ms=500
 kafka-streams.auto.offset.reset=earliest
 kafka-streams.metrics.recording.level=DEBUG
-kafka-streams.consumer.session.timeout.ms=500
+#kafka-streams.consumer.session.timeout.ms=500
 kafka-streams.consumer.heartbeat.interval.ms=200
 # Use sub-folder of embedded broker, so it gets cleaned by KafkaResource between re-runs
 # This does not work for native tests, manually clean-up /tmp/kafka-streams/temperature-aggregator
