--- a/.github/workflows/native-build-development.yml
+++ b/.github/workflows/native-build-development.yml
@@ -9,9 +9,27 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_with_native:
+  generate-json-matrix:
+    name: Native Tests - Read JSON matrix
     runs-on: ubuntu-latest
     if: "github.repository == 'quarkusio/quarkus-quickstarts' || github.event_name == 'workflow_dispatch'"
+    outputs:
+      matrix: ${{ steps.generate.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@v2
+      - id: generate
+        run: |
+          json=$(./.github/generate-native-matrix.sh | tr -d '\n')
+          echo "::set-output name=matrix::${json}"
+  build-with-native:
+    name: ${{matrix.category}}
+    runs-on: ubuntu-latest
+    needs: [generate-json-matrix]
+    if: "github.repository == 'quarkusio/quarkus-quickstarts' || github.event_name == 'workflow_dispatch'"
+    strategy:
+      max-parallel: 5
+      fail-fast: false
+      matrix: ${{ fromJson(needs.generate-json-matrix.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -44,10 +62,10 @@ jobs:
           cd quarkus
           mvn -T1C -e -B --settings .github/mvn-settings.xml clean install -Dquickly-ci
 
-      - name: Build Quickstart with native
+      - name: Build quickstarts with native
         run: |
-          mvn --settings .github/mvn-settings.xml -B clean install --fail-at-end -Pnative -Dstart-containers \
-            -Dquarkus.native.container-build=true
+          ./mvnw -e -B --settings .github/mvn-settings.xml clean install --fail-at-end -Pnative -Dstart-containers \
+            -Dquarkus.native.container-build=true -am -pl "${{ matrix.test-modules }}"
 
       #- name: Check RSS
       #  env:
